# rer_learning_code

./: .gitignore  README.md  copy2ubuntu.bat  rer_learning_code.sln
REFERENCE/: voc_eval.py
file/: bookmarks.html  common_operation_maintenance_configuration.txt  docker_usage.md  docker_usage.txt  gitlab_usage.md  make_vpn.md  ssh-ftp-ip_usage.md  ubuntu_usage.md  vs_usage.md  个人研究方向.md
interview/: RANSAC.py  ans_card.py  conv2.py  ellipsoid.py  huffman_encode.py  imbalance.py  interview.pyproj  logic_easy.py  logic_normal.py  probability.py  sort.py  uniform_lbp.py
interview/np_conv/: activation.py  conv.py  conv_ans.py  fully_connecte.py  inference.py  loss.py  pooling.py  test.py  train.py
learn_cmake/: CMakeLists.txt  learn_cmake.py  learn_cmake.pyproj
learn_cmake/src/: CMakeLists.txt  aug_helper.cpp  augmentor.cpp  image_mixer.cpp  view_png.cpp
learn_cmake/src/aug_solver/: CMakeLists.txt  aug_function.cpp  aug_function.h  aug_solver.cpp  aug_solver.h
learn_cmake/src/aug_solver/mask_maker/: CMakeLists.txt  globalmatting.cpp  globalmatting.h  mask_maker_gui.cpp  mask_maker_gui.h
learn_cmake/src/poisson_blending/: CMakeLists.txt  poisson_blender.cpp  poisson_blender.h
learn_cmake/src/stl_expand/: CMakeLists.txt  chrono_expand.cpp  chrono_expand.h  file_expand.cpp  file_expand.h  stl_expand.hpp  string_expand.cpp  string_expand.h  vector_expand.hpp
learn_pycpp/: cpp_nms.cpp  cpp_nms.h  learn_pycpp.py  learn_pycpp.pyproj  learn_pycpp_2.py  modify_order_by_weight.cpp  modify_order_by_weight.h  parallel_not_work.cpp  parallel_test.py  parallel_work.cpp  py_modify_order_by_weight.py
learn_pycy/: cy_nms.pyx  learn_pycy.py  learn_pycy.pyproj  setup.py
learn_quaternion/: CArray.cpp  CArray.h  MemLeakChecker.cpp  MemLeakChecker.h  Quaternionf.cpp  Quaternionf.h  VSCML.h  Vector3f.cpp  Vector3f.h  define.h  learn_quaternion.py  learn_quaternion.pyproj  typedef.h
learn_tf/: learn_tf.pyproj  p004_operations.py  p010_linearEquations.py  p011_SVD.py  p014_PCA.py  p016_BPNetworkForMNIST_customized_grad.py  p018_BPNetworkForMNIST.py  p020_linearRegression.py  p023_HessianMatrix.py  p025_determinant.py  p026_adamOptimizer.py  p031_costFunction.py  p035_BPNetworkForIRIS.py  p061_optimizerForlinearRegression.py  p076_conv2d.py
learn_tf/p080_convDogsCats/: cnn_dogs_cats.py  dataset.py
test_leecode/: ReadMe.txt  test_leecode.cpp  test_leecode.vcxproj  test_leecode.vcxproj.filters  test_niuke.cpp
test_module/: test_module.py  test_module.pyproj
